fix overflow-x

--- a/client/src/containers/Navbar/styles.module.scss
+++ b/client/src/containers/Navbar/styles.module.scss
@@ -9,7 +9,6 @@ $height: 50px;
   background-color: $navbarBackground;
   display: flex;
   align-items: stretch;
-  position: fixed;
   top: 0;
   z-index: 1000;
   width: 100%;
