--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -12,9 +12,10 @@ html {
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
   min-height: 100%;
-  margin:0;
-  padding:0;
-  overflow-y: scroll !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  max-width: 100%;
+  overflow-y: auto;
   overflow-x: hidden !important;
 }
 
@@ -29,7 +30,10 @@ body {
   height: 100%;
   min-height: 100%;
   top: 0 !important;
+  left: 0 !important;
   padding: 0 !important;
+  overflow-y: auto;
+  overflow-x: hidden !important;
 
   #root {
     position: relative;
